--- a/new/frontend/src/app/app.component.html
+++ b/new/frontend/src/app/app.component.html
@@ -1,10 +1,5 @@
 <main class="main">
-    <div class="card flex justify-center">
-        <p-button label="Check" />
-    </div>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+    <app-nav-bar/>
 </main>
 
 <router-outlet />
