--- a/new/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/new/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,13 @@
-<mat-toolbar>
-    @for (item of navItems; track item.label){
-        <a mat-flat-button class="nav-bar-item" [routerLink]="item.path" [disabled]="isDisabled(item.path)">{{ item.label }}</a>
-    }
-</mat-toolbar>
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                @for (item of navItems; track item.label) {
+                    <li class="nav-item ps-2 pe-2">
+                        <a aria-current="page" [class]="getNavStyle(item.path)" [routerLink]="item.path">{{ item.label }}</a>
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+</nav>
