--- a/new/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/new/frontend/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,8 @@
             <ul class="navbar-nav">
                 @for (item of navItems; track item.label) {
                     <li class="nav-item ps-2 pe-2">
-                        <a aria-current="page" [class]="getNavStyle(item.path)" [routerLink]="item.path">{{ item.label }}</a>
+                        <a aria-current="page" [class]="getNavStyle(item.path)"
+                           [routerLink]="item.path">{{ item.label }}</a>
                     </li>
                 }
             </ul>
