--- a/new/frontend/src/app/data-view/data-view.component.html
+++ b/new/frontend/src/app/data-view/data-view.component.html
@@ -1,13 +1,18 @@
+@if (isLoading) {
+    <app-spinner/>
+}
 <table class="table table-bordered">
     <thead>
-    <tr class="table-success">
-        <th scope="col">n</th>
-        <th scope="col">id</th>
-        <th scope="col">name</th>
-        <th scope="col">address</th>
-        <th scope="col">birthDate</th>
-        <th scope="col">email</th>
-    </tr>
+        @if (!isLoading){
+            <tr class="table-success">
+                <th scope="col">n</th>
+                <th scope="col">id</th>
+                <th scope="col">name</th>
+                <th scope="col">address</th>
+                <th scope="col">birthDate</th>
+                <th scope="col">email</th>
+            </tr>
+        }
     </thead>
     <tbody>
         @for (person of data; track person.id) {
