--- a/new/frontend/src/app/data-view/data-view.component.html
+++ b/new/frontend/src/app/data-view/data-view.component.html
@@ -1,9 +1,10 @@
 @if (isLoading) {
     <app-spinner/>
-}
-<table class="table table-bordered">
-    <thead>
-        @if (!isLoading){
+} @else if (errorMessage != null) {
+    <app-error-banner [errorMessage]="this.errorMessage"/>
+} @else {
+    <table class="table table-bordered">
+        <thead>
             <tr class="table-success">
                 <th scope="col">n</th>
                 <th scope="col">id</th>
@@ -12,18 +13,18 @@
                 <th scope="col">birthDate</th>
                 <th scope="col">email</th>
             </tr>
-        }
-    </thead>
-    <tbody>
-        @for (person of data; track person.id) {
-            <tr>
-                <th scope="row">{{ person.n }}</th>
-                <td>{{ person.id }}</td>
-                <td>{{ person.name }}</td>
-                <td>{{ person.address }}</td>
-                <td>{{ person.birthDate }}</td>
-                <td>{{ person.email }}</td>
-            </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @for (person of data; track person.id) {
+                <tr>
+                    <th scope="row">{{ person.n }}</th>
+                    <td>{{ person.id }}</td>
+                    <td>{{ person.name }}</td>
+                    <td>{{ person.address }}</td>
+                    <td>{{ person.birthDate }}</td>
+                    <td>{{ person.email }}</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
